# pelacables-swing-trading-core

./: .gitignore  TradingCore 24Q4.drawio  backtesting_toy.ipynb  docker-compose.yml  docker-compose2.yml  read-yayo-screener.py  readme.md  requirements.txt  zack_scrap.ipynb
.ipynb_checkpoints/: backtesting_toy-checkpoint.ipynb
TradingCore/: __init__.py  pyproject.toml  setup.py
TradingCore/backtesting/: backtester.py
TradingCore/data/: timeseries.py
TradingCore/examples/: example_backtest.py
TradingCore/indicators/: moving_average.py
TradingCore/tests/: test_timeseries.py
TradingCore/tradingcore/: __init__.py  main.py  pyproject.toml
TradingCore/tradingcore/backtesting/: __init__.py  backtester.py
TradingCore/tradingcore/data/: __init__.py  timeseries.py
TradingCore/tradingcore/examples/: example_backtest.py
TradingCore/tradingcore/indicators/: Readme.md  __init__.py  ao.py  base.py  bollinger.py  ichimoku.py  keltner.py  ma.py  macd.py  moving_average.py  psar.py  rsi.py  stochastic.py  volume.py
TradingCore/tradingcore/input/: nasdaq100.pkl
TradingCore/tradingcore/screeners/: __init__.py  base.py  data.py  yayo.py  yayo_screener.py
TradingCore/tradingcore/utils/: pepinillo.py  read_indicators_strategies.py  yahoo_finance.py
TradingCore/utils/: yahoo_finance.py
backtester_app/: indicators_strategies.json  main.py  pyproject.toml
iframe_figures/: figure_34.html  figure_36.html  figure_38.html  figure_7.html
indicator_app/: .dockerignore  dockerfile  pyproject.toml
indicator_app/indicator_app/: app.py  main.py
orchestrator/: README.md  app.ts  bun.lockb  dockerfile  indicators.db-journal  package.json  test_db.ts
orchestrator/orchestrator/: app.ts  config.ts  orchestrator.ts  types.ts
orchestrator/orchestrator/amqp/: handleRequest.ts  handleResponse.ts  handleSuscription.ts  sendRequest.ts  setupChannel.ts
orchestrator/orchestrator/db/: indicatorQueries.ts  initDatabase.ts  operationsQueries.ts  runDatabase.ts  suscriptionQueries.ts
telegram_app/: README.md  bot.ts  bun.lockb  dockerfile  package.json
telegram_app/telegram_app/: bot.ts
telegram_app/telegram_app/amqp/: handleNotification.ts  handleTicker.ts  setupChannel.ts
telegram_app/telegram_app/utils/: checkTicker.ts  loadEnv.ts
tests/: test_timeseries.py
tradingcore/: .dockerignore  dockerfile  pyproject.toml
tradingcore/tradingcore/backtesting/: backtester.py
tradingcore/tradingcore/data/: __init__.py  postgresql.py  timeseries.py
tradingcore/tradingcore/indicators/: Readme.md  __init__.py  ao.py  bollinger.py  hold.py  keltner.py  macd.py
tradingcore/tradingcore/screeners/: base.py  yayo.py
tradingcore/tradingcore/utils/: postgresql.py  read_indicators_strategies.py  sp500_tickers.py
web_app/: dockerfile  pyproject.toml
web_app/web_app/: routes.py
web_app/web_app/static/css/: style.css
web_app/web_app/static/js/: chart.js
web_app/web_app/templates/: grafico.html
zacks_alpha/: setup.py  zacks_scraper.py
