[tool.poetry]
name = "tradingcore"
version = "0.1.0"
description = ""
authors = ["KBM15 <keyblademaster_01@hotmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
pandas = "^2.2.2"
numpy = "1.26.4"
yfinance = "^0.2.40"
pandas-ta = {git = "https://github.com/twopirllc/pandas-ta.git", rev = "development"}
python-decouple = "^3.8"
ta-lib = "^0.4.32"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
