[tool.poetry]
name = "web-app"
version = "0.1.0"
description = "Aplicación web para visualizar el análisis del precio de Bitcoin"
authors = ["Tu Nombre <tu.email@ejemplo.com>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
flask = "^2.2"  # Para crear la aplicación web
flask-socketio = "^5.2"  # Para la comunicación en tiempo real con WebSockets
requests = "^2.28"  # Para hacer peticiones HTTP (si es necesario, por ejemplo, para conectar a RabbitMQ)
pika = "^1.3"  # Cliente para RabbitMQ, necesario para recibir datos en tiempo real
chart.js = "*"  # Para generar gráficos en el frontend (se incluirá mediante HTML)
psycopg2-binary = "^2.9"  # Para la conexión con bases de datos PostgreSQL, si es necesario
gunicorn = "^20.1"  # Servidor WSGI para producción

[tool.poetry.dev-dependencies]
pytest = "^7.0"  # Framework de pruebas para pruebas de unidad

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
